add div to fix problem

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-    
+
     <div id="loader">
         <div class="loader-inner">
             <div class="loader-line-wrap">
@@ -84,74 +84,69 @@
             </div>
         </section>
 
-        <section class="restaurants">
+        <section class="restaurants" id="restaurants">
             <h2 id="restaurants-title">Restaurants</h2>
             <div class="container">
-                <div class="first_line">
 
-                    <article class="card">
-                        <a href="restaurants/palette.html">
+                <article class="card">
+                    <a href="restaurants/palette.html">
 
-                            <img src="assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
-                                alt="Photo du restaurant la palette du goût">
-                            <p class="card-txt">
-                                <strong>La palette du goût</strong><br class="flop">
-                                <span class="card-txt__subtitle">Ménilmontant</span>
-                                <input type="checkbox" id="heart1" class="heart-checkbox">
-                                <label for="heart1" class="heart-label"><i class="fa-regular fa-heart"></i></label>
-                            </p>
-                            <div class="news">
-                                <p class="nouveau">Nouveau</p>
-                            </div>
-                        </a>
-                    </article>
+                        <img src="assets/img/jay-wennington-N_Y88TWmGwA-unsplash.jpg"
+                            alt="Photo du restaurant la palette du goût">
+                        <p class="card-txt">
+                            <strong>La palette du goût</strong><br class="flop">
+                            <span class="card-txt__subtitle">Ménilmontant</span>
+                            <input type="checkbox" id="heart1" class="heart-checkbox">
+                            <label for="heart1" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
+                        </p>
+                        <div class="news">
+                            <div class="nouveau">Nouveau</div>
+                        </div>
+                    </a>
+                </article>
 
-                    <article class="card">
-                        <a href="restaurants/la-note.html">
+                <article class="card">
+                    <a href="restaurants/la-note.html">
 
-                            <img src="assets/img/stil-u2Lp8tXIcjw-unsplash.jpg"
-                                alt="Photo du restaurant la note enchantée">
-                            <p class="card-txt">
-                                <strong>La note enchantée</strong><br class="flop">
-                                <span class="card-txt__subtitle">Charonne</span>
-                                <input type="checkbox" id="heart2" class="heart-checkbox">
-                                <label for="heart2" class="heart-label"><i class="fa-regular fa-heart"></i></label>
-                            </p>
-                            <div class="news">
-                                <p class="nouveau">Nouveau</p>
-                            </div>
-                        </a>
-                    </article>
-                </div>
-                    <div class="second_line">
-                    <article class="card">
-                        <a href="restaurants/francaise.html">
-                        
-                            <img src="assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
-                                alt="Photo du restaurant à la francaise">
-                            <p class="card-txt">
-                                <strong>A la francaise</strong><br class="flop">
-                                <span class="card-txt__subtitle">Cité Rouge</span>
-                                <input type="checkbox" id="heart3" class="heart-checkbox">
-                                <label for="heart3" class="heart-label"><i class="fa-regular fa-heart"></i></label>
-                            </p>
-                        </a>
-                    </article>
-                    <article class="card">
-                        <a href="restaurants/délice.html">
+                        <img src="assets/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du restaurant la note enchantée">
+                        <p class="card-txt">
+                            <strong>La note enchantée</strong><br class="flop">
+                            <span class="card-txt__subtitle">Charonne</span>
+                            <input type="checkbox" id="heart2" class="heart-checkbox">
+                            <label for="heart2" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
+                        </p>
+                        <div class="news">
+                            <div class="nouveau">Nouveau</div>
+                        </div>
+                    </a>
+                </article>
+                <article class="card">
+                    <a href="restaurants/francaise.html">
 
-                            <img src="assets/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
-                                alt="photo du restaurant le délice des sens">
-                            <p class="card-txt">
-                                <strong>Le délice des sens</strong><br class="flop">
-                                <span class="card-txt__subtitle">Folie-Méricourt</span>
-                                <input type="checkbox" id="heart4" class="heart-checkbox">
-                                <label for="heart4" class="heart-label"><i class="fa-regular fa-heart"></i></label>
-                            </p>
-                        </a>
-                    </article>          
-                    </div>       
-           </div>
+                        <img src="assets/img/toa-heftiba-DQKerTsQwi0-unsplash.jpg"
+                            alt="Photo du restaurant à la francaise">
+                        <p class="card-txt">
+                            <strong>A la francaise</strong><br class="flop">
+                            <span class="card-txt__subtitle">Cité Rouge</span>
+                            <input type="checkbox" id="heart3" class="heart-checkbox">
+                            <label for="heart3" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
+                        </p>
+                    </a>
+                </article>
+                <article class="card">
+                    <a href="restaurants/délice.html">
+
+                        <img src="assets/img/louis-hansel-shotsoflouis-qNBGVyOCY8Q-unsplash.jpg"
+                            alt="photo du restaurant le délice des sens">
+                        <p class="card-txt">
+                            <strong>Le délice des sens</strong><br class="flop">
+                            <span class="card-txt__subtitle">Folie-Méricourt</span>
+                            <input type="checkbox" id="heart4" class="heart-checkbox">
+                            <label for="heart4" class="heart-label"><i class="fa-regular fa-heart fa-xl"></i></label>
+                        </p>
+                    </a>
+                </article>
+            </div>
         </section>
     </main>
     <footer>
@@ -159,7 +154,7 @@
         <ul>
             <li class="footer-text"><i class="fa-solid fa-utensils"></i>Proposer un restaurant</li>
             <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i>Devenir partenaire</li>
-            <li class="footer-text">Mentions légales</li>
+            <li class="footer-text second">Mentions légales</li>
             <li class="footer-text">Contacts</li>
         </ul>
     </footer>
