--- a/restaurants/la-note.html
+++ b/restaurants/la-note.html
@@ -17,11 +17,14 @@
 
 <body>
     <header>
-        <a href="/index.html">
-            <i class="fa-solid fa-arrow-left"></i>
-            <img id="LogoHeader" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
-        </a>
+        <nav>
+            <a href="/index.html">
+                <i class="fa-solid fa-arrow-left"></i>
+            </a>
+        </nav>
+        <img id="LogoHeader" src="/assets/icons/ohmyfood.png" alt="Logo oh my food">
     </header>
+
     <div class="top_image">
         <img src="/assets/img/stil-u2Lp8tXIcjw-unsplash.jpg" alt="Photo du Restaurant La note enchantée">
     </div>
@@ -103,8 +106,10 @@
                     </article>
                 </section>
 
-                <h2 class="type-menu">Plats</h2>
-
+                <div class="title-part P">
+                    <h2 class="type-menu">Plats</h2>
+                </div>
+                
                 <article class="card">
                     <input type="checkbox" id="plat5" class="checkbox">
                     <label for="plat5" class="menu-label">
@@ -150,7 +155,9 @@
                     </label>
                 </article>
 
-                <h2 class="type-menu">Desserts</h2>
+                <div class="title-part D">
+                    <h2 class="type-menu">Dessert</h2>
+                </div>
 
                 <article class="card">
                     <input type="checkbox" id="plat8" class="checkbox">
@@ -212,7 +219,7 @@
                 <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
                 <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
                 </li>
-                <li class="footer-text"><a href="#">Mentions légales</a></li>
+                <li class="footer-text second"><a href="#">Mentions légales</a></li>
                 <li class="footer-text"><a href="#">Contacts</a></li>
             </ul>
         </div>
