--- a/restaurants/palette.html
+++ b/restaurants/palette.html
@@ -97,8 +97,10 @@
 
                 </section>
 
-                <h2 class="type-menu">Plats</h2>
-
+                <div class="title-part P">
+                    <h2 class="type-menu">Plats</h2>
+                </div>
+                
                 <article class="card">
                     <input type="checkbox" id="plat4" class="checkbox">
                     <label for="plat4" class="menu-label">
@@ -143,7 +145,9 @@
                     </label>
                 </article>
 
-                <h2 class="type-menu">Desserts</h2>
+                <div class="title-part D">
+                    <h2 class="type-menu">Dessert</h2>
+                </div>
 
                 <article class="card">
                     <input type="checkbox" id="plat7" class="checkbox">
@@ -203,7 +207,7 @@
                 <li class="footer-text"><i class="fa-solid fa-utensils"></i><a href="#">Proposer un restaurant</a></li>
                 <li class="footer-text"><i class="fa-solid fa-handshake-angle"></i><a href="#">Devenir partenaire</a>
                 </li>
-                <li class="footer-text"><a href="#">Mentions légales</a></li>
+                <li class="footer-text second"><a href="#">Mentions légales</a></li>
                 <li class="footer-text"><a href="#">Contacts</a></li>
             </ul>
 
